fix hanky layout on mobile.

--- a/stylesheets/additional.css
+++ b/stylesheets/additional.css
@@ -1,12 +1,9 @@
 .left_col, .right_col {
-  width: 320px;
+  width: 315px;
+  float: left;
 }
 .left_col {
-  float: left;
-  margin-right: 5px;
-}
-.right_col {
-  float: right;
+  margin-right: 20px;
 }
 
 .bio {
@@ -18,6 +15,7 @@
 }
 
 .gravatar_img {
+  margin: 15px;
   border:1px solid #;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
